--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -20,8 +20,8 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div class="main" layout="row">      
-      <div flex="80" class="wrapper">
+    <section class="main" layout="row" flex>
+      <md-content class="wrapper" flex>
 
         <div class="header">
           <div layout="row">
@@ -43,16 +43,21 @@
         <div class="container">
         <div ng-include="'views/home.html'" ng-controller="HomeCtrl"></div>
         </div>
-      </div>
+      </md-content>
 
-      <aside flex="20" class="aside-menu">
-        <ul>
-          <li><a href="#/">Browse</a></li>
-          <li><a href="#/submit">Submit a plugin</a></li>
-          <li><a href="#/contact">Contact</a></li>
-        </ul>
-      </aside>
-    </div>
+      <md-sidenav class="md-sidenav-right" md-component-id="side-menu">
+        <md-toolbar>
+          <h1 class="md-toolbar-tools">Menu</h1>
+        </md-toolbar>
+        <md-content ng-controller="SideNavCtrl">
+          <ul>
+            <li><a href="#/">Browse</a></li>
+            <li><a href="#/submit">Submit a plugin</a></li>
+            <li><a href="#/contact">Contact</a></li>
+          </ul>
+        </md-content>
+      </md-sidenav>
+    </section>
 
     <div class="footer">
       <div class="container">
@@ -84,6 +89,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/home.js"></script>
+        <script src="scripts/controllers/sidenav.js"></script>
         <!-- endbuild -->
 </body>
 </html>
