--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -45,11 +45,8 @@
         </div>
       </md-content>
 
-      <md-sidenav class="md-sidenav-right" md-component-id="side-menu">
-        <md-toolbar>
-          <h1 class="md-toolbar-tools">Menu</h1>
-        </md-toolbar>
-        <md-content ng-controller="SideNavCtrl">
+      <md-sidenav class="md-sidenav-right" md-component-id="side-menu" md-is-locked-open="true">
+        <md-content>
           <ul>
             <li><a href="#/">Browse</a></li>
             <li><a href="#/submit">Submit a plugin</a></li>
@@ -89,7 +86,6 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/home.js"></script>
-        <script src="scripts/controllers/sidenav.js"></script>
         <!-- endbuild -->
 </body>
 </html>
