--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -9,6 +9,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -91,6 +92,7 @@
         <script src="scripts/controllers/home.js"></script>
         <script src="scripts/controllers/submit.js"></script>
         <script src="scripts/controllers/contact.js"></script>
+        <script src="scripts/controllers/plugin.js"></script>
         <!-- endbuild -->
 </body>
 </html>
