plugin page: page to display descriptions

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -93,6 +93,8 @@
         <script src="scripts/controllers/submit.js"></script>
         <script src="scripts/controllers/contact.js"></script>
         <script src="scripts/controllers/plugin.js"></script>
+        <script src="scripts/directives/ratebox.js"></script>
+        <script src="scripts/filters/unsafe.js"></script>
         <!-- endbuild -->
 </body>
 </html>
