--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -86,6 +86,7 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="scripts/conf.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/header.js"></script>
         <script src="scripts/controllers/search.js"></script>
