--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -28,13 +28,11 @@
 
         <div class="header" ng-controller="HeaderCtrl">
           <div layout="row" layout-wrap>
-            <div flex="10" flex-sm="35">
-              <h1><a class="sitename" href="#/">Glpi</a></h1>
-            </div>
-            <div flex="10" flex-sm="35">
+            <div flex="30" flex-sm="100" class='logo'>
+              <a class="sitename" href="#/">Glpi</a>
               <h2>Plugins</h2>
             </div>
-            <div flex="75" flex-sm="100">
+            <div flex="65" flex-sm="100">
               <md-input-container class="searchbox">
                 <label>Search</label>
                 <input type="text" ng-model="search">
