--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -31,6 +31,7 @@
             <div flex="30" flex-sm="100" class='logo'>
               <a class="sitename" href="#/">Glpi</a>
               <h2>Plugins</h2>
+              <div class='legend'>Extend your glpi with plugins</div>
             </div>
             <div flex="65" flex-sm="100">
               <md-input-container class="searchbox">
@@ -40,6 +41,8 @@
             </div>
           </div> 
         </div>
+
+
 
         <div class="container">
           <div ui-view></div>
