--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -51,7 +51,7 @@
 
    <div ng-controller="NavCtrl">
          <md-sidenav class="md-sidenav-right" md-component-id="side-menu" md-is-locked-open="$mdMedia('gt-md')">
-            <md-button ng-click="closeNavBar()" class="md-icon-button" hide-gt-sm>
+            <md-button ng-click="closeNavBar()" class="md-icon-button" aria-label="Close Menu" hide-gt-sm>
                <i class="fa fa-times-circle"></i>  
             </md-button>
             <nav>
