add link for search

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -54,6 +54,7 @@
             </md-button>
             <nav>
                <a ui-sref="home" ui-sref-active="active">Browse</a>
+               <a ui-sref="search" ui-sref-active="active">Search</a>
                <a ui-sref="submit" ui-sref-active="active">Submit a plugin</a>
                <a ui-sref="contact" ui-sref-active="active">Contact</a>
             </nav>
