add some general animation
missing file

fix some superposition

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -16,6 +16,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/fonts.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/ui.view.animate.css">
     <!-- endbuild -->
   </head>
   <body ng-app="frontendApp">
