icons in forms, contact form responsive

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -36,9 +36,9 @@
               <div class='legend'>Extend your glpi with plugins</div>
             </div>
             <div flex="65" flex-sm="100">
-              <md-input-container class="searchbox">
+              <md-input-container class="searchbox picbox">
                 <label>Search</label>
-                <input type="text" ng-model="search" focus-me="$root.focusSearch">
+                <input type="text" ng-model="search" class="search_bar" focus-me="$root.focusSearch">
               </md-input-container>
             </div>
           </div> 
