fix toggle_menu position; + fix bower

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -60,11 +60,10 @@
                <a ui-sref="contact" ui-sref-active="active">Contact</a>
             </nav>
          </md-sidenav>
-
-         <md-button class="md-icon-button" hide-gt-sm aria-label="Toggle Menu" ng-click="toggleNavBar()">
-            <i class="fa fa-bars"></i>    
-         </md-button>
       </div>
+      <md-button class="md-icon-button toggle_menu" hide-gt-sm aria-label="Toggle Menu" ng-click="toggleNavBar()">
+         <i class="fa fa-bars"></i>    
+      </md-button>
     </section>
 
     <div class="footer">
