--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -60,7 +60,7 @@
                <a ui-sref="contact" ui-sref-active="active">Contact</a>
             </nav>
          </md-sidenav>
-         <md-button class="md-icon-button toggle_menu" hide-gt-sm aria-label="Toggle Menu" ng-click="toggleNavBar()">
+         <md-button class="md-icon-button toggle_menu" hide-gt-md aria-label="Toggle Menu" ng-click="toggleNavBar()">
             <i class="fa fa-bars"></i> 
       </div>
 
