displayed most recent versions of glpi supported

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -113,6 +113,7 @@
         <script src="scripts/directives/ratebox.js"></script>
         <script src="scripts/directives/focusme.js"></script>
         <script src="scripts/filters/unsafe.js"></script>
+        <script src="scripts/filters/subpart.js"></script>
         <!-- endbuild -->
 </body>
 </html>
