add unique filter
add missing file

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -114,6 +114,7 @@
         <script src="scripts/directives/focusme.js"></script>
         <script src="scripts/filters/unsafe.js"></script>
         <script src="scripts/filters/subpart.js"></script>
+        <script src="scripts/filters/unique.js"></script>
         <!-- endbuild -->
 </body>
 </html>
