add new filter to reduce download number (k, m, b, ...)

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -97,6 +97,7 @@
     <script src="bower_components/angular-recaptcha/release/angular-recaptcha.js"></script>
     <script src="bower_components/highlightjs/highlight.pack.js"></script>
     <script src="bower_components/angular-highlightjs/build/angular-highlightjs.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -115,6 +116,7 @@
         <script src="scripts/filters/unsafe.js"></script>
         <script src="scripts/filters/subpart.js"></script>
         <script src="scripts/filters/unique.js"></script>
+        <script src="scripts/filters/nr_format.js"></script>
         <!-- endbuild -->
 </body>
 </html>
