display list of plugins for a specific tag

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -117,6 +117,8 @@
         <script src="scripts/filters/subpart.js"></script>
         <script src="scripts/filters/unique.js"></script>
         <script src="scripts/filters/nr_format.js"></script>
+        <script src="scripts/controllers/tag.js"></script>
+        <script src="scripts/services/inlineauthors.js"></script>
         <!-- endbuild -->
 </body>
 </html>
