better display for list-name in plugin_list

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -120,6 +120,7 @@
         <script src="scripts/controllers/tag.js"></script>
         <script src="scripts/services/inlineauthors.js"></script>
         <script src="scripts/controllers/author_plugins.js"></script>
+        <script src="scripts/controllers/author.js"></script>
         <!-- endbuild -->
 </body>
 </html>
