Refactored a load of app initialization
 + removed usage of globals in conf.js
 + instead of that, added a conf.example.js that declare constants
on the angular app module
 + added translations/ folder in scripts/ that stores translations for
different languages
 + added aria-label on dateswitcher buttons to avoid notifications in
the chrome console
 + created a routes.js for all the routes declarationa
 + used 'escape' sanitize strategy with angular-translate

 + The result is a much shorter app.js !
 + and no window.API_URL and window.RECAPTCHA_PUBLIC_KEY anymore

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -58,17 +58,17 @@
                <div class="lang-switcher" ng-controller="LangSwitcherCtrl">
                  <ul>
                    <li>
-                     <md-button ng-click="setLanguage('en')" class="md-raised">
+                     <md-button ng-click="setLanguage('en')" class="md-raised" aria-label="English">
                       <span class="flag-icon flag-icon-gb"></span>
                      </md-button>
                    </li>
                    <li>
-                     <md-button ng-click="setLanguage('fr')" class="md-raised">
+                     <md-button ng-click="setLanguage('fr')" class="md-raised" aria-label="French">
                       <span class="flag-icon flag-icon-fr"></span>
                      </md-button>
                    </li>
                    <li>
-                     <md-button class="md-raised">
+                     <md-button ng-click="setLanguage('es')" class="md-raised" aria-label="Spanish">
                       <span class="flag-icon flag-icon-es"></span>
                      </md-button>
                    </li>
@@ -124,8 +124,12 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/conf.js"></script>
         <script src="scripts/app.js"></script>
+        <script src="scripts/translations/en.js"></script>
+        <script src="scripts/translations/fr.js"></script>
+        <script src="scripts/translations/es.js"></script>
+        <script src="scripts/conf.js"></script>
+        <script src="scripts/routes.js"></script>
         <script src="scripts/controllers/header.js"></script>
         <script src="scripts/controllers/nav.js"></script>
         <script src="scripts/controllers/search.js"></script>
