--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -124,6 +124,9 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="bower_components/moment/locale/en-gb.js"></script>
+        <script src="bower_components/moment/locale/fr.js"></script>
+        <script src="bower_components/moment/locale/es.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/translations/en.js"></script>
         <script src="scripts/translations/fr.js"></script>
