'home' state is now called feature

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -63,7 +63,7 @@
                     <md-option value="es"><span class="flag-icon flag-icon-es"></span> Spanish</md-option>
                   </md-select>
                </div>
-               <a ui-sref="home" ui-sref-active="active">{{'NAV_BROWSE'|translate}}</a>
+               <a ui-sref="featured" ui-sref-active="active">{{'NAV_FEATURED'|translate}}</a>
                <a ng-click="$root.focusSearch=true" ui-sref="search" ui-sref-active="active">{{'NAV_SEARCH'|translate}}</a>
                <a ui-sref="submit" ui-sref-active="active">{{'NAV_SUBMIT_A_PLUGIN'|translate}}</a>
                <a ui-sref="contact" ui-sref-active="active">{{'NAV_CONTACT'|translate}}</a>
@@ -130,7 +130,7 @@
     <script src="scripts/controllers/header.js"></script>
     <script src="scripts/controllers/nav.js"></script>
     <script src="scripts/controllers/search.js"></script>
-    <script src="scripts/controllers/home.js"></script>
+    <script src="scripts/controllers/featured.js"></script>
     <script src="scripts/controllers/submit.js"></script>
     <script src="scripts/controllers/contact.js"></script>
     <script src="scripts/controllers/plugin.js"></script>
