--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -17,7 +17,6 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/fonts.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/ui.view.animate.css">
     <!-- endbuild -->
@@ -64,6 +63,7 @@
                   </md-select>
                </div>
                <a ui-sref="featured" ui-sref-active="active">{{'NAV_FEATURED'|translate}}</a>
+               <a ui-sref="all">{{'NAV_ALLPLUGINS'|translate}}</a>
                <a ng-click="$root.focusSearch=true" ui-sref="search" ui-sref-active="active">{{'NAV_SEARCH'|translate}}</a>
                <a ui-sref="submit" ui-sref-active="active">{{'NAV_SUBMIT_A_PLUGIN'|translate}}</a>
                <a ui-sref="contact" ui-sref-active="active">{{'NAV_CONTACT'|translate}}</a>
@@ -145,6 +145,7 @@
     <script src="scripts/controllers/author.js"></script>
     <script src="scripts/directives/inlineauthors.js"></script>
     <script src="scripts/controllers/langswitcher.js"></script>
+    <script src="scripts/controllers/all.js"></script>
     <!-- endbuild -->
 </body>
 </html>
