displayed active tab in 'all plugins'

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -63,7 +63,7 @@
                   </md-select>
                </div>
                <a ui-sref="featured" ui-sref-active="active">{{'NAV_FEATURED'|translate}}</a>
-               <a ui-sref="all">{{'NAV_ALLPLUGINS'|translate}}</a>
+               <a ui-sref="all" ui-sref-active="active">{{'NAV_ALLPLUGINS'|translate}}</a>
                <a ng-click="$root.focusSearch=true" ui-sref="search" ui-sref-active="active">{{'NAV_SEARCH'|translate}}</a>
                <a ui-sref="submit" ui-sref-active="active">{{'NAV_SUBMIT_A_PLUGIN'|translate}}</a>
                <a ui-sref="contact" ui-sref-active="active">{{'NAV_CONTACT'|translate}}</a>
