--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -146,6 +146,7 @@
     <script src="scripts/directives/inlineauthors.js"></script>
     <script src="scripts/controllers/langswitcher.js"></script>
     <script src="scripts/controllers/all.js"></script>
+    <script src="scripts/controllers/authors.js"></script>
     <!-- endbuild -->
 </body>
 </html>
