--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -147,6 +147,7 @@
     <script src="scripts/controllers/langswitcher.js"></script>
     <script src="scripts/controllers/all.js"></script>
     <script src="scripts/controllers/authors.js"></script>
+    <script src="scripts/controllers/tags.js"></script>
     <!-- endbuild -->
 </body>
 </html>
